--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
     }
 
     .carousel-item:nth-child(1) {
-      background-image: url('images/slide1.jpg'); /* 替换为你的图片 */
+      background-image: url('images/slide1.jpeg'); /* 替换为你的图片 */
     }
 
     .carousel-item:nth-child(2) {
-      background-image: url('images/slide2.jpg'); /* 替换为你的图片 */
+      background-image: url('images/slide2.jpeg'); /* 替换为你的图片 */
     }
 
     .carousel-item:nth-child(3) {
-      background-image: url('images/slide3.jpg'); /* 替换为你的图片 */
+      background-image: url('images/slide3.jpeg'); /* 替换为你的图片 */
     }
 
     @keyframes slide {
