--- a/index.html
+++ b/index.html
@@ -13,58 +13,15 @@
       padding: 0;
       text-align: center;
     }
-
-    /* 轮播图样式 */
-    .carousel {
-      position: relative;
-      width: 100%;
-      max-height: 400px;
-      overflow: hidden;
-    }
-
-    .carousel-inner {
-      display: flex;
-      width: 300%;
-      animation: slide 15s infinite;
-    }
-
-    .carousel-item {
-      flex: 1 0 100%;
-      height: 300px;
-      background-size: cover;
-      background-position: center;
-    }
-
-    .carousel-item:nth-child(1) {
-      background-image: url('images/slide1.jpeg'); /* 替换为你的图片 */
-    }
-
-    .carousel-item:nth-child(2) {
-      background-image: url('images/slide2.jpeg'); /* 替换为你的图片 */
-    }
-
-    .carousel-item:nth-child(3) {
-      background-image: url('images/slide3.jpeg'); /* 替换为你的图片 */
-    }
-
-    @keyframes slide {
-      0% { transform: translateX(0); }
-      33% { transform: translateX(-100%); }
-      66% { transform: translateX(-200%); }
-      100% { transform: translateX(0); }
-    }
-
     header {
       background-color: #28a745;
       color: white;
-      padding: 20px;
+      padding: 40px 20px;
     }
-
     nav {
       background-color: #218838;
       padding: 15px 0;
     }
-
     nav a {
       color: white;
       text-decoration: none;
@@ -72,19 +29,62 @@
       margin: 0 30px;
       font-weight: bold;
     }
-
     .container {
       max-width: 600px;
-      margin: 40px auto;
+      margin: 60px auto;
       padding: 30px;
       background-color: white;
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0,0,0,0.1);
     }
-
     .btn {
       display: inline-block;
       background-color: #28a745;
+      color: white;
+      padding: 15px 30px;
+      margin: 20px;
+      font-size: 1.1em;
+      text-decoration: none;
+      border-radius: 6px;
+      transition: background-color 0.3s ease;
+    }
+    .btn:hover {
+      background-color: #218838;
+    }
+    footer {
+      background-color: #f0f0f0;
+      padding: 20px;
+      font-size: 0.9em;
+      color: #666;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>我的世界存档分享站</h1>
+    <p>欢迎下载我的 Java 版与基岩版存档！持续更新中 ✅</p>
+  </header>
+
+  <nav>
+    <a href="java.html">Java 版存档</a>
+    <a href="bedrock.html">基岩版存档</a>
+  </nav>
+
+  <div class="container">
+    <h2>欢迎来到我的 Minecraft 存档分享站</h2>
+    <p>点击下方按钮，查看 Java 版或基岩版的存档列表，并下载你喜欢的世界！</p>
+    <p>
+      <a class="btn" href="java.html">查看 Java 版存档</a><br>      <a class="btn" href="bedrock.html">查看 基岩版存档</a>
+    </p>
+  </div>
+
+  <footer>
+    <p>© 2025 Minecraft 存档分享站 | 由 <a href="https://github.com/yourusername" target="_blank">yourusername</a> 维护</p>
+  </footer>
+
+</body>
+</html>ackground-color: #28a745;
       color: white;
       padding: 15px 30px;
       margin: 20px;
