--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
   </div>
 
   <footer>
-    <p>© 2025 Minecraft 存档分享站 | 由 <a href="https://github.com/yourusername" target="_blank">yourusername</a> 维护</p>
+    <p>© 2025 Minecraft 存档分享站 | 由 <a href="https://github.com/shihuangboya" target="_blank">Shihuangboya</a> 维护</p>
   </footer>
 
 </body>
