Modified the required game version to "1.20".

--- a/bedrock.html
+++ b/bedrock.html
@@ -64,7 +64,7 @@
 
   <header>
     <h1>基岩版存档列表</h1>
-    <p>以下为我的 Minecraft 基岩版存档，适用于 1.19+ 及以上版本。</p>
+    <p>以下为我的 Minecraft 基岩版存档，适用于 1.20 及以上版本。</p>
   </header>
 
   <main>
