--- a/java.html
+++ b/java.html
@@ -64,7 +64,7 @@
 
   <header>
     <h1>Java 版存档列表</h1>
-    <p>以下为我的 Minecraft Java 版存档，适用于 1.16+ 及以上版本。</p>
+    <p>以下为我的 Minecraft Java 版存档，适用于 1.20 及以上版本。</p>
   </header>
 
   <main>
