--- a/bedrock.html
+++ b/bedrock.html
@@ -84,18 +84,21 @@
           <td>冒险地图 - 地下迷宫</td>
           <td>18.5 MB</td>
           <td>2025-04-02</td>
-          <td><a class="btn-download" href="saves/bedrock/dungeon.zip" download>下载</a></td>
+          <td><a class="btn-download" href="#">详情</a></td>
+          <td><a class="btn-download" href="saves/bedrock/city.zip" download>下载</a></td>
         </tr>
         <tr>
           <td>创意模式 - 城市景观</td>
           <td>39.6 MB</td>
           <td>2025-03-30</td>
+          <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/bedrock/city.zip" download>下载</a></td>
         </tr>
         <tr>
           <td>小游戏地图 - 跑酷挑战</td>
           <td>12.4 MB</td>
           <td>2025-03-25</td>
+          <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/bedrock/parkour.zip" download>下载</a></td>
         </tr>
       </tbody>
@@ -103,7 +106,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Minecraft 存档分享站 | 由 yourusername 维护</p>
+    <p>© 2025 Minecraft 存档分享站 | 由 Shihuangboya 维护</p>
   </footer>
 
 </body>
