--- a/java.html
+++ b/java.html
@@ -84,18 +84,21 @@
           <td>生存世界 - 初学者套装</td>
           <td>25.3 MB</td>
           <td>2025-04-01</td>
+          <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/java/survival1.zip" download>下载</a></td>
         </tr>
         <tr>
           <td>建筑作品 - 中世纪城堡</td>
           <td>42.1 MB</td>
           <td>2025-03-28</td>
+          <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/java/castle.zip" download>下载</a></td>
         </tr>
         <tr>
           <td>冒险地图 - 恐怖矿洞</td>
           <td>31.8 MB</td>
           <td>2025-03-15</td>
+          <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/java/mineshaft.zip" download>下载</a></td>
         </tr>
       </tbody>
@@ -103,7 +106,7 @@
   </main>
 
   <footer>
-    <p>© 2025 Minecraft 存档分享站 | 由 yourusername 维护</p>
+    <p>© 2025 Minecraft 存档分享站 | 由 Shihuangboya 维护</p>
   </footer>
 
 </body>
