--- a/bedrock.html
+++ b/bedrock.html
@@ -53,6 +53,17 @@
     .btn-download:hover {
       background-color: #218838;
     }
+    .btn-download-cannot {
+      display: inline-block;
+      background-color: #ff0000;
+      color: white;
+      padding: 6px 12px;
+      text-decoration: none;
+      border-radius: 4px;
+    }
+    .btn-download-cannot:hover {
+      background-color: #c70000;
+    }
     footer {
       text-align: center;
       padding: 20px;
@@ -81,25 +92,11 @@
       </thead>
       <tbody>
         <tr>
-          <td>冒险地图 - 地下迷宫</td>
+          <td>Example</td>
           <td>18.5 MB</td>
           <td>2025-04-02</td>
-          <td><a class="btn-download" href="#">详情</a></td>
-          <td><a class="btn-download" href="saves/bedrock/city.zip" download>下载</a></td>
-        </tr>
-        <tr>
-          <td>创意模式 - 城市景观</td>
-          <td>39.6 MB</td>
-          <td>2025-03-30</td>
-          <td><a class="btn-download" href="#">详情</a></td>
-          <td><a class="btn-download" href="saves/bedrock/city.zip" download>下载</a></td>
-        </tr>
-        <tr>
-          <td>小游戏地图 - 跑酷挑战</td>
-          <td>12.4 MB</td>
-          <td>2025-03-25</td>
-          <td><a class="btn-download" href="#">详情</a></td>
-          <td><a class="btn-download" href="saves/bedrock/parkour.zip" download>下载</a></td>
+          <td><a class="btn-download-cannot" href="#">详情</a></td>
+          <td><a class="btn-download-cannot" href="#" download>示例不能下载！</a></td>
         </tr>
       </tbody>
     </table>
