--- a/java.html
+++ b/java.html
@@ -81,25 +81,11 @@
       </thead>
       <tbody>
         <tr>
-          <td>生存世界 - 初学者套装</td>
-          <td>25.3 MB</td>
-          <td>2025-04-01</td>
+          <td>Create</td>
+          <td>48.1 MB</td>
+          <td>2025-09-05</td>
           <td><a class="btn-download" href="#">详情</a></td>
           <td><a class="btn-download" href="saves/java/survival1.zip" download>下载</a></td>
-        </tr>
-        <tr>
-          <td>建筑作品 - 中世纪城堡</td>
-          <td>42.1 MB</td>
-          <td>2025-03-28</td>
-          <td><a class="btn-download" href="#">详情</a></td>
-          <td><a class="btn-download" href="saves/java/castle.zip" download>下载</a></td>
-        </tr>
-        <tr>
-          <td>冒险地图 - 恐怖矿洞</td>
-          <td>31.8 MB</td>
-          <td>2025-03-15</td>
-          <td><a class="btn-download" href="#">详情</a></td>
-          <td><a class="btn-download" href="saves/java/mineshaft.zip" download>下载</a></td>
         </tr>
       </tbody>
     </table>
